--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,9 @@ dependencies {
      */
     implementation 'com.balysv:material-ripple:1.0.2'
 
+
+    // lottie
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
 }
