--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,23 +7,34 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
-        applicationId "uz.gita.recentnews"
+        applicationId "uz.gita.recentnews_slp"
         minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        targetSdk 33
+        versionCode 2
+        versionName "1.1"
 
-        buildConfigField('String', 'BASE_URL', '"https://inshorts.vercel.app/"')
+        buildConfigField('String', 'BASE_URL', '"https://inshorts.me/news/"')
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
+    signingConfigs{
+        release{
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
+            signingConfig signingConfigs.release
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,10 +52,10 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -54,7 +65,7 @@ dependencies {
     /**
      *  Room
      */
-    def room_version = "2.4.2"
+    def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
@@ -63,16 +74,17 @@ dependencies {
      *  Lifecycle
      */
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha06"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha06"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha06"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0-alpha06"
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha03"
+    //noinspection LifecycleAnnotationProcessorWithJava8
+    kapt "androidx.lifecycle:lifecycle-compiler:2.6.0-alpha03"
 
     /**
      *   viewBinding
      */
-    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.0-beta02'
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.3'
 
     /**
      * REST API: Adding retrofit to the mainLayer
@@ -91,7 +103,7 @@ dependencies {
     /**
      * Gson
      * */
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     /*************************************
      *        PinView
@@ -109,8 +121,8 @@ dependencies {
      *  Navigation
      */
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     /**
      *  Ripple
