--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="uz.gita.recentnews">
+    package="uz.gita.recentnews_slp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,7 +8,7 @@
 
 
     <application
-        android:name=".app.App"
+        android:name="uz.gita.recentnews_slp.app.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.RecentNews">
         <activity
-            android:name=".MainActivity"
+            android:name="uz.gita.recentnews_slp.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
