--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
     dependencies {
         def nav_version = "2.4.2"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.39.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0"
     }
 }
 
@@ -17,7 +18,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
