--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+
+RELEASE_STORE_FILE=recentnews.jks
+RELEASE_STORE_PASSWORD=suyunovlazizjon
+RELEASE_KEY_ALIAS=recentnews
+RELEASE_KEY_PASSWORD=suyunovlazizjon
